# BlindFold

./: .env.example  .env.production  .gitignore  ARCHITECTURE (1).md  ARCHITECTURE (2).md  DEPLOYMENT_STATUS.md  DEPLOYMENT_UPDATES.md  DEPLOY_QUICK.md  HOT_KIT_SETUP.md  IMPLEMENTACION_MCP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  MIGRATION_GUIDE.md  NOVA_SETUP_COMPLETE.md  PENDING.md  PRODUCTION_DEPLOY.md  README.md  SETUP_GUIDE.md  TEST_PLAN.md  UI_INTEGRATION_COMPLETE.md  VAULT_INTEGRATION_GUIDE.md  VERCEL_DEPLOY.md  check-user-status.sql  next.config.js  package-lock.json  package.json  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
components/: AlertBanner.tsx  ChatInterface.tsx  GroupSelectionModal.tsx  HotWalletConnect.tsx  MessageBubble.tsx  NovaSetupBanner.tsx  NovaSetupModal.tsx  OnChainVerification.tsx  PortfolioForm.tsx  PortfolioSidebar.tsx  RiskScoreCard.tsx  SwapModal.tsx  VaultControls.tsx  VerificationBadge.tsx  WalletConnector.tsx
contexts/: VaultContext.tsx  WalletContext.tsx
contract/: Cargo.toml  README.md  build.sh
contract/src/: lib.rs
lib/: auth-client.ts  auth.ts  blindfold-contract.ts  constants.ts  encryption.ts  fastnear.ts  hot-kit.ts  near-ai.ts  near-auth.ts  near-rpc.ts  nep413.ts  nova-agents.ts  nova-audit.ts  nova-encryption.ts  nova-groups.ts  nova-simple.ts  nova.ts  portfolio-analytics.ts  portfolio.ts  prisma.ts  verification.ts
nova-mcp-server/: .env.example  .render-deploy-trigger  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  requirements.txt  server.py  server_rest.py
prisma/: schema.prisma
(+77 files in other folders)
